--- a/Consumer/src/main/resources/application.properties
+++ b/Consumer/src/main/resources/application.properties
@@ -2,5 +2,8 @@ server.port=0
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.example.ordercommon.serializer.OrderDeserializer
 
-spring.application.name=spring-cloud-eureka-client
+spring.application.name=consumer-service
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+
+grpc.client.order-service.address=localhost:9090
+grpc.client.order-service.negotiation-type=plaintext
